Update cross-site links to use HTTPS protocol
Replace HTTP links to mountainfireband.com with HTTPS equivalents
in navigation menus across all pages to improve security and avoid
potential protocol downgrade warnings.

Changes:
- Updated Photography link: https://www.mountainfireband.com/photos.htm
- Updated Music link: https://www.mountainfireband.com/

--- a/index.htm
+++ b/index.htm
@@ -21,8 +21,8 @@
                     <div class="menu">
                         <ul>
                             <li><a href="./">Poetry</a></li>
-                            <li><a href="https://YOUR_USERNAME.github.io/mountainfireband/photos.htm">Photography</a></li>
-                            <li><a href="https://YOUR_USERNAME.github.io/mountainfireband/index.htm">Music</a></li>
+                            <li><a href="https://www.mountainfireband.com/photos.htm">Photography</a></li>
+                            <li><a href="https://www.mountainfireband.com/">Music</a></li>
                             <li><a href="./contact.htm">Contact</a></li>
                         </ul>
                     </div>
