--- a/blueandgreen.htm
+++ b/blueandgreen.htm
@@ -47,7 +47,11 @@
                 <div class="frow">
                     <div class="col-md-2-5">
                         <span class="poetry-by"><em>Poetry and Photography by WT Davies</em><br>
-                        </span><a href="./blueandgreen.htm"><a href="./blueandgreen.htm"><img src="./images/blueandgreen-large.jpg" alt="GREEN FIELDS" class="content-image"></a></a></div>
+                        </span>
+                        <a href="./blueandgreen.htm">
+                            <img src="./images/blueandgreen-large.jpg" alt="GREEN FIELDS" class="content-image">
+                        </a>
+                    </div>
                     <div class="col-md-3-5">
                        <!-- <span class="poetry-by">Poetry and Photography by WT Davies</span>-->
                         <h2 class="text-uppercase">Green and Blue</h2>
