--- a/sweptaway.htm
+++ b/sweptaway.htm
@@ -49,7 +49,7 @@
                         <span class="poetry-by"><em>Poetry and Photography by WT Davies</em><br>
                         </span>
                         <a href="./sweptaway.htm">
-                            <img src="images/sweptaway-large.jpg" alt="ENOUGH" class="content-image">
+                            <img src="images/sweptaway-large.jpg" alt="SWEPT AWAY" class="content-image">
                         </a>
                 </div>
                     <div class="col-md-3-5">
