--- a/therushingedgeofnight.htm
+++ b/therushingedgeofnight.htm
@@ -49,12 +49,12 @@
                        <span class="poetry-by"><em>Poetry and Photography by WT Davies</em><br>
                         </span>
                         <a href="./therushingedgeofnight.htm">
-                            <img src="./images/3758 Large for edge of night.jpg" alt="The Rushing Edge of NIght" class="content-image">
+                            <img src="./images/3758 Large for edge of night.jpg" alt="The Rushing Edge of Night" class="content-image">
                         </a>
                     </div>
                     <div class="col-md-3-5">
                        <!-- <span class="poetry-by">Poetry and Photography by WT Davies</span>-->
-                        <h2 class="text-uppercase">The Rushing Edge of NIght</h2>
+                        <h2 class="text-uppercase">The Rushing Edge of Night</h2>
                         <div class="result-snipped-text">
                             <div class="result-snipped-text">
                                 <p class="paragraph">For a moment we stood on  the cliff at the edge of the Ajo<br>
